Bug 690568 - Problem with type usage on itanium (64bit)
Summary: Problem with type usage on itanium (64bit)
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: General (show other bugs)
Version: 8.64
Hardware: PC Linux
: P4 normal
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-24 06:28 UTC by Dr. Werner Fink
Modified: 2012-08-15 04:33 UTC (History)
4 users (show)

See Also:
Customer:
Word Size: ---


Attachments
ghostscript-8.61-broken64.dif (977 bytes, patch)
2009-06-24 06:28 UTC, Dr. Werner Fink
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dr. Werner Fink 2009-06-24 06:28:17 UTC
This type usage leads to problems on itanium
Comment 1 Dr. Werner Fink 2009-06-24 06:28:54 UTC
Created attachment 5153 [details]
ghostscript-8.61-broken64.dif

... and is fixed by this small patch.
Comment 2 Ray Johnston 2009-06-25 10:18:15 UTC
Ralph, contact Marcos or Henry for time on an i7 (until you get yours)
Comment 3 Henry Stiles 2009-06-25 10:21:28 UTC
Can you elaborate on the problem description, compiler errors, runtime errors, etc.
Comment 4 Marcos H. Woehrmann 2009-06-25 18:01:21 UTC
I don't think an i7 will help, IItanium is IA-64 and i7 is X86-64.  According to wikipedia: "Itanium's 
architecture differs dramatically from the x86-64 architectures used in other Intel processors. "
Comment 5 Hin-Tak Leung 2010-08-02 00:17:56 UTC
Confirm and re-assign bugs with attached/in-line patches for another person to review.
Comment 6 Alex Cherepanov 2012-08-15 04:33:33 UTC
Commit a contributed patch for Itanium. The patch looks reasonable: size_t is
a better type than unsigned int to express the offset. The patch has no effect
on our regression testing. Most likely, we won't be able to test it on an
Itanium box. There's no point to keep siting on the patch.

The patch has been committed as a rev.
http://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=437360af2799796c42304faaf9a0cc1e5c6f908c