Bug 690568: Type usage problem on Itanium.

Commit a contributed patch for Itanium. The patch looks reasonable: size_t is
a better type than unsigned int to express the offset. The patch has no effect
on our regression testing.